--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,5 @@
 {deps, [
-        {cowboy, "0.8.4", {git, "https://github.com/extend/cowboy.git", {tag, "0.8.4"}}},
-        {jiffy},
-        {gproc}
+        {cowboy, ".*", {git, "https://github.com/extend/cowboy.git", {tag, "0.8.4"}}},
+        {jiffy, ".*", {git, "https://github.com/davisp/jiffy.git", {branch, "master"}}},
+        {gproc, ".*", {git, "https://github.com/uwiger/gproc.git", {branch, "master"}}}
        ]}.
