cowboyだけバージョン指定してみた

--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,5 @@
 {deps, [
-        {cowboy, ".*", {git, "https://github.com/extend/cowboy.git", {tag, "0.8.4"}}},
+        {cowboy, "1.0.1", {git, "https://github.com/extend/cowboy.git", {tag, "0.8.4"}}},
         {jiffy, ".*", {git, "https://github.com/davisp/jiffy.git", {branch, "master"}}},
         {gproc, ".*", {git, "https://github.com/uwiger/gproc.git", {branch, "master"}}}
        ]}.
