--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "devDependencies": {
-    "coffeeify": "~1.1.0"
   },
   "dependencies": {
     "react": "~0.13.2",
     "md2react": "~0.6.3",
-    "browserify": "~10.1.3"
+    "browserify": "~10.1.3",
+    "coffeeify": "~1.1.0"
   }
 }
